--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>seahub100 - Portfolio</title>
+    <title>chelsealaberinto - Portfolio</title>
     <style>
         body {
             min-height: 100vh;
@@ -124,3 +124,4 @@
 </body>
 
 </html>
+
