--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chelsealaberinto - Portfolio</title>
+    <link rel="icon" type="sea logo/png" href="assets/sea logo.png">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <style>
         body {
             min-height: 100vh;
@@ -65,13 +69,52 @@
             font-weight: bold;
             margin-bottom: 16px;
             color: #ff69b4;
-
         }
 
         .about-text {
             color: #f0f0f0;
             font-size: 1.07em;
             line-height: 1.6;
+        }
+
+        .top-right-img {
+            position: absolute;
+            top: 50%;
+            right: 5%;
+            transform: translateY(-50%);
+            width: clamp(80px, 15vw, 150px);
+            height: auto;
+            border-radius: 50%;
+            border: 4px solid #ff69b4;
+            object-fit: cover;
+        }
+
+
+        .card {
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 20, 147, 0.4);
+            backdrop-filter: blur(10px);
+            color: #fff;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-6px);
+            box-shadow: 0 0 20px rgba(255, 20, 147, 0.4);
+        }
+
+        .card-title {
+            color: #ff69b4;
+        }
+
+        .btn-primary {
+            background-color: #ff69b4;
+            border: none;
+            transition: background-color 0.3s;
+        }
+
+        .btn-primary:hover {
+            background-color: #ff007f;
         }
 
         @media (max-width: 700px) {
@@ -90,38 +133,232 @@
             }
         }
 
-        .top-right-img {
-            position: absolute;
-            top: 50%;
-            right: 5%;
-            transform: translateY(-50%);
-            width: clamp(80px, 15vw, 150px);
+        body {
+            margin: 0;
+            font-family: 'Poppins', sans-serif;
+            background-color: #fff;
+            color: #fff9e4;
+        }
+
+        .hero-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 80px 100px;
+            min-height: 100vh;
+            flex-wrap: wrap;
+        }
+
+
+        .text-section {
+            flex: 1;
+            max-width: 550px;
+        }
+
+        .headline {
+            font-size: 5rem;
+            font-weight: 800;
+            line-height: 1;
+            margin-bottom: 20px;
+        }
+
+        .headline span {
+            color: #ff007f;
+        }
+
+        .description {
+            font-size: 1.1rem;
+            color: #ffffff;
+            margin-bottom: 40px;
+            line-height: 1.6;
+        }
+
+        .image-section {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .image-bg {
+            background-color: #ff007f;
+            border-radius: 30px;
+            padding: 40px;
+            width: 400px;
+            height: 400px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 0 30px rgba(255, 0, 127, 0.3);
+        }
+
+        .profile-img {
+            width: 100%;
             height: auto;
-            border-radius: 50%;
-            border: 4px solid #ff69b4;
+            border-radius: 20px;
             object-fit: cover;
+        }
+
+        @media (max-width: 992px) {
+            .hero-container {
+                flex-direction: column;
+                text-align: center;
+                padding: 60px 30px;
+            }
+
+            .image-bg {
+                margin-top: 50px;
+                width: 300px;
+                height: 300px;
+            }
+
+            .headline {
+                font-size: 3rem;
+            }
         }
     </style>
 </head>
 
 <body>
-    <div class="fluid-container">
-        <img src="assets/profile.jpg" alt="Profile Picture" class="top-right-img">
+    <!-- Navigation Bar -->
+    <style>
+        .navigation {
+            transition: background-color 0.4s ease, backdrop-filter 0.4s ease;
+            background-color: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(5px);
+        }
 
-        <div class="welcome">WELCOME TO MY WORLD </div>
-        <div class="headline">Hi, I'm Sea</div>
-        <div class="sub-headline">Third Year Student</div>
+        .navigation.scrolled {
+            background-color: rgba(255, 255, 255, 0.6);
+            backdrop-filter: blur(5px);
+        }
+    </style>
+
+    <div class="container-fluid position-sticky top-0 p-0 p-lg-3 z-1">
+        <div class="container-xl p-0">
+            <div class="navigation glass shadow-sm p-4 px-xl-5 poppins rounded-5 border-bottom">
+                <div class="d-flex flex-column flex-lg-row justify-content-between align-items-center">
+                    <div class="d-flex flex-row align-items-center">
+                        <a href="../../../">
+                            <img class="me-4" src="assets/sea logo.png" style="width: 50px; height: 50px;">
+                        </a>
+                        <div
+                            class="d-flex flex-row mt-2 mt-lg-0 flex-wrap justify-content-center align-items-center gap-3">
+                            <a href="#" class="nav-link"><small>Home</small></a>
+                            <a href="#features" class="nav-link"><small>Collections</small></a>
+                            <a href="#about" class="nav-link"><small>About</small></a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+    <div class="hero-container">
+        <div class="text-section">
+            <h1 class="headline"><span>Hello!</span><br>I'm Sea</h1>
+            <p class="description">
+                Welcome to my digital space — a creative journey where technology meets art.
+                Discover projects that combine innovation, design, and passion.
+            </p>
+
+        </div>
+        <div class="image-section">
+            <div class="image-bg">
+                <img src="assets/chelseapfp.png" alt="Chelsea Laberinto" class="profile-img">
+            </div>
+        </div>
+    </div>
+
 
     <div class="section">
         <div class="section-title">About Me</div>
         <div class="about-text">
-            Hello! I'm Chelsea Laberinto, a student at the Polytechnic University of the Philippines Sto. Tomas Campus,
-            currently pursuing a degree in Information Technology. I have a deep passion for technology and a keen interest
-            in web development. I'm excited to explore the world of coding and design.
+            Hello! I’m Chelsea Laberinto, a student at the Polytechnic University of the Philippines – Sto. Tomas
+            Campus, currently pursuing a degree in Information Technology. I have a deep passion for technology and a
+            strong appreciation for art. I love watching romantic-comedy movies and spending quality time with my
+            friends and family. I also enjoy cooking and experimenting with new recipes.
         </div>
     </div>
+
+
+    <div class="container my-5">
+        <div class="section-title text-center mb-4">
+            <h2 class="fw-bold">Projects</h2>
+        </div>
+
+        <div class="row justify-content-center g-4">
+            <!-- Card 1 -->
+            <div class="col-md-6 col-lg-6 my-5">
+                <div class="card shadow border-0 rounded-4" style="width: 100%; overflow: hidden;">
+                    <div class="ratio ratio-16x9">
+                        <iframe src="https://chelsealaberinto.github.io/chelsea-showcase.github.io/"
+                            title="Chelsea Showcase" loading="lazy" allowfullscreen style="border:0;"></iframe>
+                    </div>
+                    <div class="card-body text-center">
+                        <h5 class="card-title fw-semibold">Chelsea’s Hardware Showcase</h5>
+                        <p class="card-text text-secondary">
+                            A creative showcase of Chelsea’s favorite Hardware Gadget.
+                        </p>
+                        <a href="https://chelsealaberinto.github.io/chelsea-showcase.github.io/" target="_blank"
+                            class="btn btn-primary fw-semibold px-4 py-2 rounded-pill">
+                            Visit Site
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="col-md-6 col-lg-6 my-5">
+                <div class="card shadow border-0 rounded-4" style="width: 100%; overflow: hidden;">
+                    <div class="ratio ratio-16x9">
+                        <iframe src="https://chelsealaberinto.github.io/chelsea-beaches-showcase.github.io/"
+                            title="Chelsea Beaches Showcase" loading="lazy" allowfullscreen style="border:0;"></iframe>
+                    </div>
+                    <div class="card-body text-center">
+                        <h5 class="card-title fw-semibold">Chelsea’s Beaches Showcase</h5>
+                        <p class="card-text text-secondary">
+                            Explore beautiful beaches and scenic coasts through this showcase.
+                        </p>
+                        <a href="https://chelsealaberinto.github.io/chelsea-beaches-showcase.github.io/" target="_blank"
+                            class="btn btn-primary fw-semibold px-4 py-2 rounded-pill">
+                            Visit Site
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="container-fluid glass mt-4 p-5 shadow-sm text-center border-top rounded-top-5">
+        <div class="row">
+            <div class="col">
+                <div class="mb-3">
+                    <img src="assets/sea logo.png" alt="Beaches Go Everywhere" style="height: 50px; width: 50px;">
+                </div>
+                <div class="my-4">
+                    <small>Let's make every day a beach day!</small>
+                </div>
+                <div class="mt-5 text-body-secondary">© 2025 Chelsea's Beach Showcase</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Scripts -->
+    <script>
+        window.addEventListener('scroll', function () {
+            const nav = document.querySelector('.navigation');
+            if (window.scrollY > 50) {
+                nav.classList.add('scrolled');
+            } else {
+                nav.classList.remove('scrolled');
+            }
+        });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
-
