--- a/index.html
+++ b/index.html
@@ -206,6 +206,26 @@
         </div>
     </div>
 
+    <div class="col-md-6 col-lg-6 my-5 mx-auto">
+        <div class="card shadow border-0 rounded-4"
+            style="width:100%; overflow:hidden; background:rgba(255,255,255,0.05); border:1px solid rgba(255,20,147,0.4); backdrop-filter:blur(10px); color:#fff; margin-left:10px; margin-right:10px;">
+            <div class="ratio ratio-16x9">
+                <iframe src="https://chelsealaberinto.github.io/chelsea-gallery-showcase.github.io/"
+                    title="Chelsea Princesses Gallery" loading="lazy" allowfullscreen style="border:0;"></iframe>
+            </div>
+            <div class="card-body text-center">
+                <h5 class="card-title fw-semibold" style="color:#ff69b4;">Chelsea’s Princesses Gallery</h5>
+                <p class="card-text text-secondary" style="color:#ccc;">
+                    Enter the enchanting world of your favorite princesses.
+                </p>
+                <a href="https://chelsealaberinto.github.io/chelsea-gallery-showcase.github.io/" target=""
+                    class="btn btn-primary fw-semibold px-4 py-2 rounded-pill"
+                    style="background-color:#ff69b4;border:none;">Visit Site</a>
+            </div>
+        </div>
+    </div>
+
+
     <div class="container-fluid glass mt-4 p-5 shadow-sm text-center border-top rounded-top-5">
         <div class="row">
             <div class="col">
